adding tech and entertainment section to the HTML

--- a/index.html
+++ b/index.html
@@ -114,5 +114,85 @@
             </div>
         </div>
     </section>
+    <section id="entertainment">
+        <div class="container">
+            <h2>Entretenimento</h2>
+            <div class="articles">
+                <article>
+                    <img src="./imagens/assistindo.jpg" alt="Dois garotos assistindo" />
+                    <header>
+                        <time>15/06/2024 às 17:00</time>
+                    </header>
+                    <h3>Disney+: O que muda na plataforma após fusão com o Star+?</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur consequuntur doloremque totam labore architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam tenetur error? Laborum, modi itaque. Sunt.
+                    </p>
+                    <a href="#" title="Leia a notícia completa">Ler mais</a>
+                </article>
+                <article>
+                    <img src="./imagens/netflix.webp" alt="Um casal utilizando o serviço Netflix" />
+                    <header>
+                        <time>15/06/2024 às 17:00</time>
+                    </header>
+                    <h3>5 filmes e séries em alta na Netflix para assistir no final de semana</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur consequuntur doloremque totam labore architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam tenetur error? Laborum, modi itaque. Sunt.
+                    </p>
+                    <a href="#" title="Leia a notícia completa">Ler mais</a>
+                </article>
+                <article>
+                    <img src="./imagens/pipoca.jpg" alt="Um grupo de amigos conversando comendo pipoca" />
+                    <header>
+                        <time>15/06/2024 às 17:00</time>
+                    </header>
+                    <h3>Besouro Azul vai ganhar série derivada</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur consequuntur doloremque totam labore architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam tenetur error? Laborum, modi itaque. Sunt.
+                    </p>
+                    <a href="#" title="Leia a notícia completa">Ler mais</a>
+                </article>
+            </div>
+        </div>
+    </section>
+    <section id="tech">
+        <div class="container">
+            <h2>Tecnologia</h2>
+            <div class="articles">
+                <article>
+                    <img src="./imagens/computador.png" alt="Um computador rodeado de icones de tecnologia" />
+                    <header>
+                        <time>15/06/2024 às 17:00</time>
+                    </header>
+                    <h3>Nova tecnologia permitirá carregar o celular em apenas 60 segundos</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur consequuntur doloremque totam labore architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam tenetur error? Laborum, modi itaque. Sunt.
+                    </p>
+                    <a href="#" title="Leia a notícia completa">Ler mais</a>
+                </article>
+                <article>
+                    <img src="./imagens/robo.jpg" alt="Um robô em pose pensativa" />
+                    <header>
+                        <time>15/06/2024 às 17:00</time>
+                    </header>
+                    <h3>O futuro é mesmo elétrico? Veja os planos de cada montadora no Brasil</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur consequuntur doloremque totam labore architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam tenetur error? Laborum, modi itaque. Sunt.
+                    </p>
+                    <a href="#" title="Leia a notícia completa">Ler mais</a>
+                </article>
+                <article>
+                    <img src="./imagens/tecnologia.webp" alt="Uma mão cheia de icones e computadores e celular" />
+                    <header>
+                        <time>15/06/2024 às 17:00</time>
+                    </header>
+                    <h3>IA no Google: confira onde a empresa nunca vai utilizar a tecnologia</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur consequuntur doloremque totam labore architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam tenetur error? Laborum, modi itaque. Sunt.
+                    </p>
+                    <a href="#" title="Leia a notícia completa">Ler mais</a>
+                </article>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
